# ql-label

./: .env.example  .gitignore  BROTHER_QL800_RASTER_SPEC.md  CLAUDE.md  Cargo.toml  QR820NWB_000J9Z880381.txt  QR820NWB_000L4G359687.txt  README.md  docker-compose.yml  printer_status.txt
examples/: README.md  init.rs  print_rust.rs  print_two_color.rs  read_status.rs
src/: error.rs  labels.rs  lib.rs  main.rs  media.rs  media2.rs  model.rs  printer.rs  utils.rs
